# qtGameOfLife

./: CMakeLists.txt  README.md
include/: Cell.h  Cells.h  GameOfLifeWidget.h
src/: Cell.cpp  Cells.cpp  GameOfLifeWidget.cpp  main.cpp
test/: CMakeLists.txt  TestGameOfLife.cpp
